--- a/14-exercise-saturn/index.html
+++ b/14-exercise-saturn/index.html
@@ -14,42 +14,41 @@
   <div id="main"></div>
   <script src='../three.js'></script>
   <script>
-    // set up the environment
-    // initialize scene, camera objects and renderer
-    let scene, camera, renderer, sphere;
+    let scene, camera, renderer;
     let ADD  = 0.01;
 
-    let init = function(){
-    // create the scene
-    scene = new THREE.Scene();
-    // scene.background = new THREE.Color(0xababab);
+    let createTorus = function() {
 
-    let createSphere = function() {
-      let geometry = new THREE.SphereGeometry(5, 30, 30);
+      // let geometry = new THREE.TorusGeometry(5, 1, 2, 20, 2 * Math.PI);
+      // let geometry = new THREE.TorusGeometry(5, 1, 2, 60, 2 * Math.PI);
+      let geometry = new THREE.TorusGeometry(4, 0.5, 5, 30)
+
+      // change the arc to 180deg
+      // let geometry = new THREE.TorusGeometry(5, 1, 30, 30, Math.PI);
+
       let material = new THREE.MeshBasicMaterial({color: 0xffffff});
-      sphere = new THREE.Mesh( geometry, material );
-      scene.add(sphere);
+      torus = new THREE.Mesh( geometry, material );
+      scene.add(torus);
     }
 
-    // create and locate the camera
+    let init = function(){
+    scene = new THREE.Scene();
+    scene.background = new THREE.Color(0x000000);
+
     camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 1000);
-    camera.position.z = 15;
+    camera.position.z = 20;
 
-    // let axes = new THREE.AxesHelper(5)
-    // scene.add(axes);
+    createTorus()
 
-    createSphere()
-
-    // create the renderer
     renderer = new THREE.WebGLRenderer();
     renderer.setSize(window.innerWidth, window.innerHeight);
 
     document.body.appendChild(renderer.domElement);
   };
 
-  // main animation loop - calls 50-60 in a second.
   let mainLoop = function(){
-    camera.position.x = 2;
+    // torus.rotation.x = 270
+    torus.rotation.y = 301
 
     renderer.render(scene, camera);
     requestAnimationFrame(mainLoop)
