--- a/14-exercise-saturn/index.html
+++ b/14-exercise-saturn/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <style>
-    body { margin: 0; }
-    canvas { width: 100%; height: 100% }
+    body {
+      margin: 0;
+    }
+
+    canvas {
+      width: 100%;
+      height: 100%
+    }
   </style>
 </head>
+
 <body>
   <div id="main"></div>
   <script src='../three.js'></script>
   <script>
     let scene, camera, renderer;
-    let ADD  = 0.01;
+    let ADD = 0.01;
 
-    let createTorus = function() {
+    let createTorus = function () {
 
       // let geometry = new THREE.TorusGeometry(5, 1, 2, 20, 2 * Math.PI);
       // let geometry = new THREE.TorusGeometry(5, 1, 2, 60, 2 * Math.PI);
@@ -26,37 +34,38 @@
       // change the arc to 180deg
       // let geometry = new THREE.TorusGeometry(5, 1, 30, 30, Math.PI);
 
-      let material = new THREE.MeshBasicMaterial({color: 0xffffff});
-      torus = new THREE.Mesh( geometry, material );
+      let material = new THREE.MeshBasicMaterial({ color: 0xffffff });
+      torus = new THREE.Mesh(geometry, material);
       scene.add(torus);
     }
 
-    let init = function(){
-    scene = new THREE.Scene();
-    scene.background = new THREE.Color(0x000000);
+    let init = function () {
+      scene = new THREE.Scene();
+      scene.background = new THREE.Color(0x000000);
 
-    camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 1000);
-    camera.position.z = 20;
+      camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 1000);
+      camera.position.z = 20;
 
-    createTorus()
+      createTorus()
 
-    renderer = new THREE.WebGLRenderer();
-    renderer.setSize(window.innerWidth, window.innerHeight);
+      renderer = new THREE.WebGLRenderer();
+      renderer.setSize(window.innerWidth, window.innerHeight);
 
-    document.body.appendChild(renderer.domElement);
-  };
+      document.body.appendChild(renderer.domElement);
+    };
 
-  let mainLoop = function(){
-    // torus.rotation.x = 270
-    torus.rotation.y = 301
+    let mainLoop = function () {
+      // torus.rotation.x = 270
+      torus.rotation.y = 309
 
-    renderer.render(scene, camera);
-    requestAnimationFrame(mainLoop)
-  };
+      renderer.render(scene, camera);
+      requestAnimationFrame(mainLoop)
+    };
 
-  init();
-  mainLoop();
+    init();
+    mainLoop();
 
   </script>
 </body>
+
 </html>
