--- a/07-showing-first-sceen/index.html
+++ b/07-showing-first-sceen/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="">
   <title>Document</title>
   <style>
-    body { margin: 0; }
-    canvas { width: 100%; height: 100% }
+    body {
+      margin: 0;
+    }
+
+    canvas {
+      width: 100%;
+      height: 100%
+    }
   </style>
 </head>
+
 <body>
   <div id="main"></div>
   <script src='../three.js'></script>
@@ -18,32 +27,33 @@
     // initialize scene, camera objects and rendere
     let scene, camera, renderer;
 
-    let init = function(){
-    // create the scene
-    scene = new THREE.Scene();
-    scene.background = new THREE.Color(0xababab);
+    let init = function () {
+      // create the scene
+      scene = new THREE.Scene();
+      scene.background = new THREE.Color(0xababab);
 
-    // create and locate the camera
-    camera = new THREE.PerspectiveCamera(30, window.innerWidth / window.innerHeight, 1, 1000);
-    camera.position.z = 5;
+      // create and locate the camera
+      camera = new THREE.PerspectiveCamera(30, window.innerWidth / window.innerHeight, 1, 1000);
+      camera.position.z = 5;
 
-    // create the renderer
-    renderer = new THREE.WebGLRenderer();
-    renderer.setSize(window.innerWidth, window.innerHeight);
+      // create the renderer
+      renderer = new THREE.WebGLRenderer();
+      renderer.setSize(window.innerWidth, window.innerHeight);
 
-    document.body.appendChild(renderer.domElement);
-  };
+      document.body.appendChild(renderer.domElement);
+    };
 
-  // main animation loop - calls 50-60 in a second.
-  let mainLoop = function(){
+    // main animation loop - calls 50-60 in a second.
+    let mainLoop = function () {
 
-    renderer.render(scene, camera);
-    requestAnimationFrame(mainLoop)
-  };
+      renderer.render(scene, camera);
+      requestAnimationFrame(mainLoop)
+    };
 
-  init();
-  mainLoop();
+    init();
+    mainLoop();
 
   </script>
 </body>
+
 </html>
