--- a/08-exercise/index.html
+++ b/08-exercise/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="">
   <title>Document</title>
   <style>
-    body { margin: 0; }
-    canvas { width: 100%; height: 100% }
+    body {
+      margin: 0;
+    }
+
+    canvas {
+      width: 100%;
+      height: 100%
+    }
   </style>
 </head>
+
 <body>
   <div id="main"></div>
   <script src='../three.js'></script>
@@ -17,89 +26,90 @@
     // set up the environment
     // initialize scene, camera objects and rendere
     let scene, camera, renderer;
-    let ADD  = 0.03;
+    let ADD = 0.03;
 
     // create cube
-    let createCube = function(){
-      let geometry = new THREE.BoxGeometry(1,1,1);
-      let material = new THREE.MeshBasicMaterial({color: 0x00a1cb});
-      cube = new THREE.Mesh( geometry, material );
+    let createCube = function () {
+      let geometry = new THREE.BoxGeometry(1, 1, 1);
+      let material = new THREE.MeshBasicMaterial({ color: 0x00a1cb });
+      cube = new THREE.Mesh(geometry, material);
       scene.add(cube);
     }
 
-    let init = function(){
-    // create the scene
-    scene = new THREE.Scene();
-    scene.background = new THREE.Color(0xababab);
+    let init = function () {
+      // create the scene
+      scene = new THREE.Scene();
+      scene.background = new THREE.Color(0xababab);
 
-    // create and locate the camera
-    camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 1000);
-    camera.position.z = 7;
+      // create and locate the camera
+      camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 1000);
+      camera.position.z = 7;
 
-    let axes = new THREE.AxesHelper(5)
+      let axes = new THREE.AxesHelper(5)
 
-    scene.add(axes);
+      scene.add(axes);
 
-    createCube()
+      createCube()
 
-    // create the renderer
-    renderer = new THREE.WebGLRenderer();
-    renderer.setSize(window.innerWidth, window.innerHeight);
+      // create the renderer
+      renderer = new THREE.WebGLRenderer();
+      renderer.setSize(window.innerWidth, window.innerHeight);
 
-    document.body.appendChild(renderer.domElement);
-  };
+      document.body.appendChild(renderer.domElement);
+    };
 
-  // main animation loop - calls 50-60 in a second.
+    // main animation loop - calls 50-60 in a second.
 
-  // let counter = 0;
-  let mainLoop = function(){
-    // cube.position.x += ADD;
-    // cube.rotation.x += ADD;
-    camera.position.x = 2;
-    cube.rotation.y += ADD;
+    // let counter = 0;
+    let mainLoop = function () {
+      // cube.position.x += ADD;
+      // cube.rotation.x += ADD;
+      camera.position.x = 2;
+      cube.rotation.y += ADD;
 
-    setTimeout(()=>{
-      ADD += .05;
-    }, 2000)
+      setTimeout(() => {
+        ADD += .05;
+      }, 2000)
 
-    setTimeout(()=>{
-      camera.position.y -= .01;
-      cube.position.z += .01;
-    }, 5000)
+      setTimeout(() => {
+        camera.position.y -= .01;
+        cube.position.z += .01;
+      }, 5000)
 
-    // if(camera.position.z >= 5){
-    //   camera.position.z += .02;
-    // }
-
-
-    // counter += 1;
+      // if(camera.position.z >= 5){
+      //   camera.position.z += .02;
+      // }
 
 
-    // if(counter % 15 === 0){
-    //   camera.rotation += 1;
-    // }
+      // counter += 1;
 
-    // if(cube.position.x <= -2 || cube.position.x >= 2){
-    //   ADD *= -1;
-    //   cube.material.color = new THREE.Color(0x00abac)
-    // }
 
-    // if(counter > 50){
-    //   ADD += .01;
-    //   cube.material.color = new THREE.Color(0x000000)
-    // }
+      // if(counter % 15 === 0){
+      //   camera.rotation += 1;
+      // }
 
-    // if(counter > 90){
-    //   cube.material.color = new THREE.Color(0xFF0000)
-    // }
+      // if(cube.position.x <= -2 || cube.position.x >= 2){
+      //   ADD *= -1;
+      //   cube.material.color = new THREE.Color(0x00abac)
+      // }
 
-    renderer.render(scene, camera);
-    requestAnimationFrame(mainLoop)
-  };
+      // if(counter > 50){
+      //   ADD += .01;
+      //   cube.material.color = new THREE.Color(0x000000)
+      // }
 
-  init();
-  mainLoop();
+      // if(counter > 90){
+      //   cube.material.color = new THREE.Color(0xFF0000)
+      // }
+
+      renderer.render(scene, camera);
+      requestAnimationFrame(mainLoop)
+    };
+
+    init();
+    mainLoop();
 
   </script>
 </body>
+
 </html>
